# task-dev-aa-uberpopug

./: .gitignore  INITIAL-ARCHITECTURE.md  README.md  create_stream.py  docker-compose.yaml  drop_all.py  other.py  scenario.py  streams.py
accounting/: pyproject.toml
accounting/accounting/: dbmodel.py
accounting/accounting/config/: __init__.py
accounting/app/: cron.py  main.py
analytics/: pyproject.toml
analytics/analytics/: dbmodel.py
analytics/analytics/config/: __init__.py
analytics/app/: main.py
auth/: Dockerfile  main.py  pyproject.toml
auth/app/: main.py
auth/auth/: authenticator.py  dbmodel.py  dbschema.py  jwt_encoder.py  schema.py
auth/auth/config/: __init__.py
auth/config/: __init__.py
certs/: jwt-private.pem  jwt-public.pem
common/: pyproject.toml
common/common/: authorizer.py  generate_events_from_schemas.py  jwt_decoder.py
schemaregistry/: schemasaver.py
schemaregistry/accounting/EndOfDayHappened/: v1.json
schemaregistry/accounting/FinTransactionApplied/: v1.json
schemaregistry/accounting/TaskCostsGenerated/: v1.json
schemaregistry/auth/AccountCreated/: v1.json
schemaregistry/auth/AccountUpdated/: v1.json
schemaregistry/tasktracker/TaskAdded/: v1.json  v2.json
schemaregistry/tasktracker/TaskAssigned/: v1.json
schemaregistry/tasktracker/TaskCompleted/: v1.json
tasktracker/: main.py  pyproject.toml
tasktracker/app/: main.py
tasktracker/tasktracker/: dbmodel.py
tasktracker/tasktracker/config/: __init__.py
